Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#15810 closed bug (fixed)

StyledEdit: Clicking on menus loses selection

Reported by: jackburton Owned by: nobody
Priority: normal Milestone: R1/beta2
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Open StyledEdit. Write some text, select a part of it, then click on a menu (for example, to change text color). The selection will be lost.

I think this is a regression, and probably not limited to StyledEdit.

Change History (4)

comment:1 by X512, 5 years ago

This is regression after hrev53944 and fixed in https://review.haiku-os.org/c/haiku/+/2355.

comment:2 by un_spacyar, 5 years ago

I guess this issue have to be on the Beta 2 roadmap, isn't? IIRC, Beta 1 doesn't had this issue.

comment:3 by waddlesplash, 5 years ago

Resolution: fixed
Status: newclosed

Fix merged in hrev54031.

comment:4 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.